<resources>
    <string name="app_name">App Teste</string>
    <string name="Enviar">enviar</string>
    <string name="digite_a_mensagem">Digite a mensagem</string>
    <string name="message">Campo obrigatório</string>
    <string name="Validado">Validado</string>
    <string name="login_hint_password">Senha</string>
    <string name="login_nome_hint">Email</string>
    <string name="acessar">Acessar</string>
    <string name="msg_campo_obrigatorio">Campo obrigatório</string>
    <string name="msg_error_login">Erro na autenticação</string>
    <string name="senha">Senha</string>
    <string name="email">Email</string>
    <string name="nome">Nome</string>
</resources>
