package com.example.autodoc.appteste;

import android.support.test.filters.LargeTest;
import android.support.test.runner.AndroidJUnit4;

import org.junit.runner.RunWith;

@RunWith(AndroidJUnit4.class)
@LargeTest
public class LoginPresenterTeste {
//
//    @Rule
//    public ActivityTestRule<LoginActivity> mActivityRule =
//            new ActivityTestRule<>(LoginActivity.class);
//
//    @Test
//    public void clickButtonLogin_openHomeActivityUi(){
//
//        String email = "silasadailton@hotmail.com";
//        String senha = "123456";
//
//        onView(withId(R.id.edit_login)).perform(typeText(email),closeSoftKeyboard());
//        onView(withId(R.id.edit_senha)).perform(typeText(senha),closeSoftKeyboard());
//        onView(withId(R.id.button_login)).perform(click());
//        //onView(withId(R.id.button_login)).perform(click());
//
//        onView(withId(R.id.text_mensagem)).check(matches(isDisplayed()));
//    }

}
