package com.example.autodoc.appteste;

import android.support.test.filters.LargeTest;
import android.support.test.runner.AndroidJUnit4;

import org.junit.runner.RunWith;

@RunWith(AndroidJUnit4.class)
@LargeTest
public class HomeActivityTest {
//    @Rule
//    public ActivityTestRule<HomeActivity> mActivityRule =
//            new ActivityTestRule<HomeActivity>(HomeActivity.class);
//
//    @Test
//    public void saveMessage()throws Exception{
//        String mensagem = "Teste mensagem espresso";
//
//        onView(withId(R.id.text_mensagem)).perform(typeText(mensagem),closeSoftKeyboard());
//        onView(withId(R.id.button_enviar)).perform(click());
//
//        onView(withId(R.id.recyclerViewMessage)).check(matches(isDisplayed()));
//
//    }
//
//    @Test
//    public void openRecyclerView_selectText() throws Exception {
//
//       String newNoteDescription = "TESTE 1541";
//        onView(withId(R.id.recyclerViewMessage)).perform(scrollTo(hasDescendant(withText(newNoteDescription))));
//        //onView(withId(R.id.recyclerViewMessage)).perform(actionOnItemAtPosition(5,click()));
//
//    }
}

